Kubernetes/deprecated-docs/Operations/FLK/elasticsearch-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: elasticsearch-logging
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  elasticsearch-logging
  template:
    metadata:
      name:  elasticsearch-logging
      labels:
        app:  elasticsearch-logging
    spec:
      containers:
      - image: elasticsearch:5
      #- image: gcr.io/google_containers/elasticsearch:v2.4.1-1
        name: elasticsearch-logging
        resources:
          # need more cpu upon initialization, therefore burstable class
          limits:
            cpu: 1000m
          requests:
            cpu: 100m
        ports:
        - containerPort: 9200
          name: db
          protocol: TCP
        - containerPort: 9300
          name: transport
          protocol: TCP

        volumeMounts:
        - name: k8s-elasticseach-pvc
          mountPath: /data
        - name: config-volume-storage
          mountPath: /usr/share/elasticsearch/config/
      volumes:
      - name: config-volume-storage
        configMap:
          name: elasticsearch
      - name: k8s-elasticseach-pvc
        persistentVolumeClaim:
          claimName: k8s-elasticseach-pvc
---

apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-logging
  labels:
    app: elasticsearch-logging
spec:
  type: NodePort
  ports:
  - port: 9200
    protocol: TCP
    targetPort: 9200
  selector:
    app: elasticsearch-logging


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: devops-k8s-elasticsearch-ingress
spec:
 rules:
   - host: kube-logs.example.com
     http:
       paths:
         - path: /
           backend:
             serviceName: elasticsearch-logging
             servicePort: 9200
